# Memo

./: .aidigestignore  .gitignore  LICENSE  README.md  changes.md  codebase.md  config.json  crac.db  index.html  launcher.py  memo.db  memo.db-shm  memo.db-wal  pyproject.toml  requirements.txt
BotUpdate/: config.json  main.py  requirements.txt
BotUpdate/cogs/: admin.py  events.py  fun.py  md.md  moderation.py  music.py  utility.py
BotUpdate/utils/: config_manager.py  db_manager.py  helper.py
Templates/Basic/: bot.py
Templates/Command/: bot.py
Templates/Embed/: bot.py
Templates/Medium/: bot.py
Templates/Modal/: bot.py
Templates/On Message/: bot.py
db_manager/: feedback.py  guild_configs.py  history.py  usage.py
hooks/: pre-commit
setup/: clear_feedback_table.py  clear_guild_config_table.py  clear_history_table.py  clear_usage_table.py  create_feedback_table.py  create_guild_configs_table.py  create_history_table.py  create_usage_table.py
src/: bot.py
src/cogs/: member_events.py  member_join.py  member_remove.py  new_guild.py
src/utils/: chatbot.py  code_runner.py  config_manager.py  helper.py  sha3.py  word_filter.py
test/: rps.py  tcm.py  test.tcm  vector_search.py
website/: 404.html  codebase.md  donate.html  home.html  index.html  privacy-policy.html  support.html  terms-of-use.html  versions.html
website/404/: index.html
website/articles/: add-feedback.html  articles.html  commands-guide.html  commands.html  config-guide.html  config.html
website/commands/: index.html
website/donate/: index.html
website/pride/: index.html
(+31 files in other folders)
